--- a/src/dashboard-clean.html
+++ b/src/dashboard-clean.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <div class="theme-toggle" id="theme-toggle" title="Toggle Dark/Light Mode">
+    <div class="theme-toggle" id="theme-toggle" role="button" aria-pressed="false" aria-label="Toggle Dark/Light Mode" tabindex="0">
         <i class="ph-bold ph-sun"></i>
     </div>
 
@@ -48,18 +48,18 @@
                         <i class="ph-bold ph-magnifying-glass search-icon"></i>
                         <input type="text" class="search-input" placeholder="Type it, find it, flex it!..." />
                     </div>
-                    <div class="notification-bell">
+                    <div class="notification-bell" role="button" aria-label="View notifications" tabindex="0">
                         <i class="ph-bold ph-bell"></i>
                         <div class="notification-badge" style="display: none;"></div> <!-- Hidden by default -->
                     </div>
                     <div class="user-profile">
-                        <button id="profile-dropdown-btn">
+                        <button id="profile-dropdown-btn" aria-haspopup="true" aria-expanded="false" aria-controls="profile-dropdown">
                             <img id="user-profile-pic" src="https://ui-avatars.com/api/?name=User&size=150&background=random" alt="User profile">
                             <span id="user-display-name">Loading...</span>
                             <i class="ph-fill ph-caret-down"></i>
                         </button>
-                        <div id="profile-dropdown" class="hidden">
-                            <button id="sign-out-btn">Sign Out</button>
+                        <div id="profile-dropdown" class="hidden" role="menu" aria-labelledby="profile-dropdown-btn">
+                            <button id="sign-out-btn" role="menuitem">Sign Out</button>
                         </div>
                     </div>
                 </div>
@@ -158,8 +158,8 @@
                         <i class="ph-fill ph-books" style="font-size: 0.8rem; color: var(--bg-color);"></i>
                     </div> 
                     <div class="timeline-content">
-                        <p><b>DSP notes</b> for 3rd sem uploaded by user</p>
-                        <div class="timeline-time">Updating...</div>
+                        <p class="skeleton" style="height: 20px; width: 80%; margin-bottom: 0.5rem;"></p>
+                        <div class="timeline-time skeleton" style="height: 14px; width: 50%;"></div>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -167,8 +167,8 @@
                         <i class="ph-fill ph-tag" style="font-size: 0.7rem; color: var(--bg-color);"></i>
                     </div>
                     <div class="timeline-content">
-                        <p>New listing in <b>Hostel Market</b>: "Kettle for sale"</p>
-                        <div class="timeline-time">Updating...</div>
+                        <p class="skeleton" style="height: 20px; width: 75%; margin-bottom: 0.5rem;"></p>
+                        <div class="timeline-time skeleton" style="height: 14px; width: 45%;"></div>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -176,8 +176,8 @@
                         <i class="ph-fill ph-hands-clapping" style="font-size: 0.7rem; color: var(--bg-color);"></i>
                     </div>
                     <div class="timeline-content">
-                        <p>Help request for <b>"Compiler Design"</b> assignment</p>
-                        <div class="timeline-time">Updating...</div>
+                        <p class="skeleton" style="height: 20px; width: 85%; margin-bottom: 0.5rem;"></p>
+                        <div class="timeline-time skeleton" style="height: 14px; width: 40%;"></div>
                     </div>
                 </div>
             </section>
@@ -209,13 +209,10 @@
 
             <section class="widget progress-widget">
                 <h3>Daily Goals</h3>
-                <div style="margin: 1rem 0;">
-                    <p style="margin-bottom: 0.5rem; font-size: 0.9rem;">Study Progress</p>
-                    <div class="progress-bar">
-                        <div class="progress-fill" style="width: 0%"></div>
-                    </div>
-                    <span style="font-size: 0.8rem; color: var(--text-secondary);">50% Complete</span>
+                <div class="radial-progress">
+                    <span class="progress-value">50%</span>
                 </div>
+                <p style="text-align: center; font-size: 0.8rem; color: var(--text-secondary); margin-top: 0.5rem;">Study Progress</p>
             </section>
         </aside>
     </div>
