Fix rate limiting functionality and add new features
- Fixed messagingRateLimit and requestRateLimit to use proper object API
- Resolved TypeError: messagingRateLimit.isAllowed is not a function
- Added comprehensive chat system with real-time messaging
- Integrated lost-and-found functionality
- Enhanced security utilities with RateLimiter class
- Updated Firestore security rules
- Improved dashboard and market functionality

--- a/src/dashboard-clean.html
+++ b/src/dashboard-clean.html
@@ -72,7 +72,7 @@
 
             <div class="section-header">
                 <h2>Quick Access</h2>
-                <span class="section-count">6</span>
+                <span class="section-count">7</span>
             </div>
 
             <section class="feature-grid">
@@ -142,6 +142,17 @@
                         <button class="btn-small">Check Now</button>
                     </div>
                 </article>
+
+                <article class="card" data-route="chats" tabindex="0" role="button" aria-label="View My Chats">
+                    <i class="card-icon ph-bold ph-chats-circle"></i>
+                    <h3 class="card-title">My Chats</h3>
+                    <p class="card-tagline">Your conversations about items & assignments.</p>
+                    <span class="card-stat">Updating...</span>
+                    <div class="card-details">
+                        <p>View and manage all your active conversations in one place.</p>
+                        <button class="btn-small">Open Chats 💬</button>
+                    </div>
+                </article>
             </section>
         </main>
 
@@ -199,9 +210,9 @@
                     </div>
                 </div>
                 <div class="metric">
-                    <span class="metric-label">Help Requests Live</span>
+                    <span class="metric-label">Lost & Found Cases</span>
                     <div style="display: flex; align-items: center;">
-                        <span class="metric-value">23</span>
+                        <span class="metric-value" id="lost-found-metric">Updating...</span>
                         <div class="metric-indicator neutral"></div>
                     </div>
                 </div>
