--- a/src/hostel-market.html
+++ b/src/hostel-market.html
@@ -9,6 +9,7 @@
     
     <title>Hostel Market - After Hours Hub</title>
     <link rel="stylesheet" href="dashboard-styles.css">
+    <link rel="stylesheet" href="chat-styles.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
         /* Additional styles for the market page */
