--- a/src/assign-help.html
+++ b/src/assign-help.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Help - After Hours Hub</title>
     <link rel="stylesheet" href="dashboard-styles.css">
+    <link rel="stylesheet" href="chat-styles.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
     <style>
