mobile ui enhancements and notification icon improved

--- a/src/dashboard-clean.html
+++ b/src/dashboard-clean.html
@@ -231,5 +231,6 @@
     <!-- Link to external JavaScript file -->
     <script type="module" src="dashboard-scripts.js"></script>
     <script type="module" src="firebase-auth.js"></script>
+    <script type="module" src="notification-system.js"></script>
 </body>
 </html>
