https://github.com/NexionisJake/After-Hours-Hub

--- a/src/assign-help.html
+++ b/src/assign-help.html
@@ -1153,6 +1153,7 @@
                         Need Help With an Assignment?
                     </h2>
                     <form id="new-request-form">
+                        <input type="hidden" id="csrf-token" name="csrfToken" value="">
                         <div class="form-group">
                             <label for="request-title">
                                 <i class="ph-bold ph-book"></i>
