--- a/src/dashboard-clean.html
+++ b/src/dashboard-clean.html
@@ -10,7 +10,7 @@
     <title>After Hours Hub - Dashboard</title>
     
     <!-- Favicon to prevent 404 -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>☕</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>☕</text></svg>">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,7 +80,7 @@
                     <i class="card-icon ph-bold ph-hand-withdraw"></i>
                     <h3 class="card-title">Assignment Help</h3>
                     <p class="card-tagline">Get peer support on tough assignments.</p>
-                    <span class="card-stat">Updating...</span>
+                    <span class="card-stat" id="assignment-help-stat">Updating...</span>
                     <div class="card-details">
                         <p>Got a challenging task to do? <br> No worries! Let peers help you with the assignments and projects.</p>
                         <button class="btn-small">Get Help 🫱🏻‍🫲🏻</button>
@@ -125,7 +125,7 @@
                     <i class="card-icon ph-bold ph-tag"></i>
                     <h3 class="card-title">Hostel Market</h3>
                     <p class="card-tagline">Buy & sell essentials on campus.</p>
-                    <span class="card-stat">Updating...</span>
+                    <span class="card-stat" id="hostel-market-stat">Updating...</span>
                     <div class="card-details">
                         <p>Campus marketplace for buying and selling student essentials.</p>
                         <button class="btn-small">Browse Market</button>
@@ -147,7 +147,7 @@
                     <i class="card-icon ph-bold ph-chats-circle"></i>
                     <h3 class="card-title">My Chats</h3>
                     <p class="card-tagline">Your conversations about items & assignments.</p>
-                    <span class="card-stat">Updating...</span>
+                    <span class="card-stat" id="my-chats-stat">Updating...</span>
                     <div class="card-details">
                         <p>View and manage all your active conversations in one place.</p>
                         <button class="btn-small">Open Chats 💬</button>
