--- a/src/lost-and-found.html
+++ b/src/lost-and-found.html
@@ -356,6 +356,7 @@
         <div class="form-section">
             <h2><i class="fas fa-plus-circle"></i> Report an Item</h2>
             <form id="report-form">
+                <input type="hidden" id="csrf-token" name="csrfToken" value="">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="item-name">
