--- a/src/dashboard-clean.html
+++ b/src/dashboard-clean.html
@@ -59,7 +59,14 @@
                             <i class="ph-fill ph-caret-down"></i>
                         </button>
                         <div id="profile-dropdown" class="hidden" role="menu" aria-labelledby="profile-dropdown-btn">
-                            <button id="sign-out-btn" role="menuitem">Sign Out</button>
+                            <button id="view-profile-btn" role="menuitem">
+                                <i class="ph-bold ph-user-circle"></i>
+                                <span>View Profile</span>
+                            </button>
+                            <button id="sign-out-btn" role="menuitem">
+                                <i class="ph-bold ph-sign-out"></i>
+                                <span>Sign Out</span>
+                            </button>
                         </div>
                     </div>
                 </div>
