--- a/src/create-event.html
+++ b/src/create-event.html
@@ -229,6 +229,12 @@
             box-shadow: 0 0 0 3px rgba(255, 217, 61, 0.2), inset 0 2px 4px rgba(0,0,0,0.2);
         }
 
+        .form-control:disabled {
+            opacity: 0.6;
+            cursor: not-allowed;
+            background: rgba(11, 14, 26, 0.3);
+        }
+
         textarea.form-control {
             resize: vertical;
             min-height: 120px;
