--- a/src/login.html
+++ b/src/login.html
@@ -236,7 +236,7 @@
                     <span class="text-md font-medium" style="color: var(--text-secondary);">Login with Google</span>
                 </button>
 
-                <div class="relative flex py-2 items-center">
+                <!-- <div class="relative flex py-2 items-center">
                     <div class="flex-grow border-t" style="border-color: var(--glass-border);"></div>
                     <span class="flex-shrink mx-4 text-sm" style="color: var(--text-secondary);">or</span>
                     <div class="flex-grow border-t" style="border-color: var(--glass-border);"></div>
@@ -245,7 +245,7 @@
                 <button id="guest-login-btn" class="w-full flex items-center justify-center gap-3 py-3 px-4 rounded-lg shadow-lg hover:scale-105 transition-all disabled:opacity-70 disabled:cursor-not-allowed" style="background: linear-gradient(135deg, var(--primary-accent) 0%, #ffca60 100%); color: var(--bg-color); box-shadow: 0 8px 25px rgba(255, 191, 66, 0.3);">
                     <span class="text-md font-bold">Continue as Guest</span>
                 </button>
-            </div>
+            </div> -->
             
             <div class="text-center mt-12">
                 <p class="text-xs" style="color: var(--text-secondary);">Tune in. Zone out. Get it done.</p>
